<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MapsActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:id="@+id/search"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:layout_below="@id/my_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@drawable/ic_search_black_24dp"/>

        <AutoCompleteTextView
            android:id="@+id/search_bar"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:completionThreshold="1" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bar_activity_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/map"
        android:background="@color/burgandy"
        app:itemIconTint="@color/nav_button_color_selector"
        app:itemTextAppearanceActive="@style/BottomNavigationViewStyle"
        app:itemTextAppearanceInactive="@style/BottomNavigationViewStyle"
        app:itemTextColor="@color/nav_button_color_selector"
        app:menu="@menu/navigation_bar" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        tools:context=".Activities.MapsActivity" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:text="ToggleButton"
        android:textOff="@string/toggle_off"
        android:textOn="@string/toggle_on"
        android:layout_below="@id/search"
        android:background="@drawable/shadow_toggle"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:checked="true"
        android:layout_centerInParent="true" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_above="@id/nav_bar_activity_maps"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/white"
        tools:ignore="BottomAppBar"
        android:visibility="invisible" />


    <LinearLayout
        android:id="@+id/explore_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/nav_bar_activity_maps"
        android:layout_alignRight="@id/map">

        <Button
            android:id="@+id/directionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_getdirections"
            android:visibility="invisible"
            android:textColor="@color/white"
            android:background="@drawable/shadow_toggle"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="30pt"
            android:padding="5dp"/>

        <Button
            android:id="@+id/exploreInsideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ExploreInside"
            android:visibility="invisible"
            android:textColor="@color/white"
            android:background="@drawable/shadow_toggle"
            android:layout_marginRight="22pt"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/nav_bar_activity_maps"
        tools:ignore="BottomAppBar"
        android:weightSum="3"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/estimatedTravelTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textColor="@color/burgundy"
            android:background="@color/white"
            android:textFontWeight="500"
            android:layout_weight="1"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/nav_bar_activity_maps"
        tools:ignore="BottomAppBar"
        android:weightSum="3"
        android:layout_gravity="bottom">


    </LinearLayout>

    <Button
        android:id="@+id/floor8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="4dp"
        android:text="8th Floor"
        android:visibility="invisible" />

    <Button
        android:id="@+id/floor9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="427dp"
        android:layout_marginEnd="4dp"
        android:text="9th Floor"
        android:visibility="invisible" />

    <Button
        android:id="@+id/floor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="313dp"
        android:layout_marginEnd="5dp"
        android:text="1st Floor"
        android:visibility="invisible" />

    <Button
        android:id="@+id/floor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="4dp"
        android:text="2nd Floor"
        android:visibility="invisible" />

    <Button
        android:id="@+id/floorCC1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="4dp"
        android:text="CC 1"
        android:visibility="invisible" />


    <Button
        android:id="@+id/floorCC2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="4dp"
        android:text="CC 2"
        android:visibility="invisible" />

    <Button
        android:id="@+id/floorVE2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="4dp"
        android:text="VE 2"
        android:visibility="invisible" />

    <Button
        android:id="@+id/floorVL1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="4dp"
        android:text="VL 1"
        android:visibility="invisible" />


    <Button
        android:id="@+id/floorVL2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="4dp"
        android:text="VL 2"
        android:visibility="invisible" />

    <Button
        android:id="@+id/floorMB1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="4dp"
        android:text="MB 1"
        android:visibility="invisible" />


    <Button
        android:id="@+id/floorMBS2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="4dp"
        android:text="MB S2"
        android:visibility="invisible" />

    <Button
        android:id="@+id/nextStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="550dp"
        android:layout_marginLeft="55dp"
        android:text="@string/string_nextstep"
        android:visibility="invisible" />

<!--    <TextView-->
<!--        android:id="@+id/estimatedShuttleTime"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_marginStart="0dp"-->
<!--        android:layout_marginEnd="0dp"-->
<!--        android:layout_marginBottom="121dp"-->
<!--        android:layout_weight="1"-->
<!--        android:background="@color/white"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/burgundy"-->
<!--        android:textFontWeight="500"-->
<!--        android:visibility="invisible" />-->


</RelativeLayout>
