...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@drawable/ic_search_black_24dp"/>

        <AutoCompleteTextView
            android:id="@+id/starting_location"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/search_starting_location_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/getDirectionsButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:elevation="10dp"
            android:src="@drawable/ic_directions_black_24dp"
            android:tint="@color/white"
            android:layout_centerInParent="true"
...
