<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/main_home"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="#ScoutConcordia"/>

         <item
            android:id="@+id/main_schedule"
            android:title="@string/CourseSchedule" />

        <item
            android:id="@+id/main_shuttle"
            android:icon="@drawable/ic_directions_bus_black_24dp"
            android:title="@string/ShuttleBus"/>

        <item
        android:id="@+id/main_settings"
        android:icon="@drawable/settings"
        android:title="@string/setting_title"
        app:showAsAction="always"/>




</menu>