<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SettingsActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/my_toolbar"
        android:id="@+id/fragment_container"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bar_activity_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/fragment_container"
        android:background="@color/burgandy"
        app:itemIconTint="@color/nav_button_color_selector"
        app:itemTextAppearanceActive="@style/BottomNavigationViewStyle"
        app:itemTextAppearanceInactive="@style/BottomNavigationViewStyle"
        app:itemTextColor="@color/nav_button_color_selector"
        app:menu="@menu/navigation_bar" />



</RelativeLayout>